2002-09-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* trans/transtab.c :
	* trans/transtab.h :

	  - Added transform function in transtab. Takes an initial expression,
	    the tranformation name with the variable replacements then
	    gives out the resulting expression.

	* exp/comp_exp.c :

	  - Fixed pointer bug.

	* exp/gnd_exp.c :
	* exp/gnd_exp.h :

	  - Added a copy function to copy a ground expression.

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :

	  - Added a copy function to copy the contents of one list to
	    another. 

2002-09-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/comp_exp.c :

	  - Added check in replace function to ensure that the
	    varlist and the identlist are of equal length.

2002-09-17  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :
	* exp/gnd_exp.h :

	  - Renamed get_superset to group.

	  - Added a function that checks whether a given expression is true,
	    false or unknown in a given expression.

	* exp/expression.h :

	  - Added res_type (true, false unknown).

	* ident/identlist.c :
	* ident/indetlist.h :

	  - Added length function.

	* exp/gnd_exp.c :

	  - Added a get_superset function to get a list of identifiers that
	    are supergroups of a given identifier.

2002-09-14  Vino Crescini  <jcrescin@cit.uws.edu.au>


	* exp/comp_exp.c :
	* exp/comp_exp.h :

	  - Added a replace function that takes a non-ground expression,
	    a list of variables and a list of replacement identifiers and
	    gives a ground expression where the variables are replaced
	    with the corresponding identifier.

2002-09-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - Added an index function that returns the index of the first
	    node that matches the given data.

2002-09-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/expression.h :
